# pipenv

./: Pipfile  README.md  VERSION.txt  pyproject.toml  requirements.txt  setup.py
pipver/: lib.py  semanticversion.py
scripts/: pipver
