[tool.poetry]
name = "pipver"
version = "0.1.8"
license = "GPL-3.0-or-later"
description = "Python package versioning made easy"
authors = ["John Shanahan <shanahan.jrs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"
click = "^7.1.2"
colorama = "^0.4.3"
gitpython = "^3.1.7"

[tool.poetry.dev-dependencies]
yapf = "^0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
pipver = "bin.pipver:main"
